force-app/main/default/objects/EdFund_Vendor__c/EdFund_Vendor__c.object-meta.xml
<CustomObject>
    <label>EdFund Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EdFund Vendor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>