force-app/main/default/objects/EdFund_Vendor__c/fields/Agree_to_pay_the_total_cost_in_3_install__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_pay_the_total_cost_in_3_install__c</fullName>
    <inlineHelpText>Agree to pay the total cost in 3 installments ? (registration + 2 installments divided evenly throughout the course)</inlineHelpText>
    <label>Agree to pay total cost in 3 installment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Indicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>