force-app/main/default/objects/EdFund_Vendor__c/fields/Any_graduation_requirements__c.field-meta.xml
<CustomField>
    <fullName>Any_graduation_requirements__c</fullName>
    <label>Any graduation requirements</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>