force-app/main/default/objects/EdFund_Vendor__c/fields/Any_other_eligibility_requirements_e_g__c.field-meta.xml
<CustomField>
    <fullName>Any_other_eligibility_requirements_e_g__c</fullName>
    <description>Any other eligibility requirements (e.g., HS diploma, etc.)?:</description>
    <label>Any other eligibility requirements</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>