force-app/main/default/objects/EdFund_Vendor__c/fields/Are_you_a_testing_site__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_testing_site__c</fullName>
    <label>Are you a testing site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>