force-app/main/default/objects/EdFund_Vendor__c/fields/Attendance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Policy__c</fullName>
    <label>Attendance Policy</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>