force-app/main/default/objects/EdFund_Vendor__c/fields/Bilingual_instructors__c.field-meta.xml
<CustomField>
    <fullName>Bilingual_instructors__c</fullName>
    <label>Bilingual instructors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>