force-app/main/default/objects/EdFund_Vendor__c/fields/Can_you_provide_us_a_progress_report__c.field-meta.xml
<CustomField>
    <fullName>Can_you_provide_us_a_progress_report__c</fullName>
    <inlineHelpText>Can you provide us a progress report with attendance and test scores when submitting invoices?</inlineHelpText>
    <label>Can you provide us a progress report?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>