force-app/main/default/objects/EdFund_Vendor__c/fields/Cancellation_Refund_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Refund_Policy__c</fullName>
    <label>Cancellation/Refund Policy</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>