force-app/main/default/objects/EdFund_Vendor__c/fields/Clinical_Lab_Instructor_to_student_ratio__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Lab_Instructor_to_student_ratio__c</fullName>
    <description>Clinical/Lab Instructor to student ratio</description>
    <label>Clinical/Lab Instructor to student ratio</label>
    <length>18</length>
    <type>Text</type>
</CustomField>