force-app/main/default/objects/EdFund_Vendor__c/fields/Cost_of_Parking__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Parking__c</fullName>
    <label>Cost of Parking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>