force-app/main/default/objects/EdFund_Vendor__c/fields/If_No_is_it_a_public_school__c.field-meta.xml
<CustomField>
    <fullName>If_No_is_it_a_public_school__c</fullName>
    <label>If No, is it a public school</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>