force-app/main/default/objects/EdFund_Vendor__c/fields/In_class_Exam_Passing_Percentage__c.field-meta.xml
<CustomField>
    <fullName>In_class_Exam_Passing_Percentage__c</fullName>
    <label>In-class Exam Passing Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>