force-app/main/default/objects/EdFund_Vendor__c/fields/Is_Cost_all_inclusive__c.field-meta.xml
<CustomField>
    <fullName>Is_Cost_all_inclusive__c</fullName>
    <label>Is Cost all inclusive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>