force-app/main/default/objects/EdFund_Vendor__c/fields/Length_of_English_test__c.field-meta.xml
<CustomField>
    <fullName>Length_of_English_test__c</fullName>
    <label>Length of test (minutes)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>