force-app/main/default/objects/EdFund_Vendor__c/fields/Location_Address_of_Parking__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_of_Parking__c</fullName>
    <label>Location/Address of Parking</label>
    <type>TextArea</type>
</CustomField>