force-app/main/default/objects/EdFund_Vendor__c/fields/Name1__c.field-meta.xml
<CustomField>
    <fullName>Name1__c</fullName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>