force-app/main/default/objects/EdFund_Vendor__c/fields/Name_of_the_assessments__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_assessments__c</fullName>
    <label>Name of the assessments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>