force-app/main/default/objects/EdFund_Vendor__c/fields/Offer_Ability_to_Benefit_ATB_Assessme__c.field-meta.xml
<CustomField>
    <fullName>Offer_Ability_to_Benefit_ATB_Assessme__c</fullName>
    <inlineHelpText>(ATB)</inlineHelpText>
    <label>Offer Ability to Benefit Assessments?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>