force-app/main/default/objects/EdFund_Vendor__c/fields/Other1__c.field-meta.xml
<CustomField>
    <fullName>Other1__c</fullName>
    <label>Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>