force-app/main/default/objects/EdFund_Vendor__c/fields/Other_trainings_you_offer_RNA_CEUs_CP__c.field-meta.xml
<CustomField>
    <fullName>Other_trainings_you_offer_RNA_CEUs_CP__c</fullName>
    <inlineHelpText>(RNA, CEUs, CPR, etc.)</inlineHelpText>
    <label>Other trainings you offer?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>