force-app/main/default/objects/EdFund_Vendor__c/fields/Others_If_Specify__c.field-meta.xml
<CustomField>
    <fullName>Others_If_Specify__c</fullName>
    <label>Others (If Specify)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>