force-app/main/default/objects/EdFund_Vendor__c/fields/Parking_available_on_site__c.field-meta.xml
<CustomField>
    <fullName>Parking_available_on_site__c</fullName>
    <label>Parking available on site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>