force-app/main/default/objects/EdFund_Vendor__c/fields/POC_to_schedule_the_assessments__c.field-meta.xml
<CustomField>
    <fullName>POC_to_schedule_the_assessments__c</fullName>
    <inlineHelpText>Who do we reach out to schedule the assessments?</inlineHelpText>
    <label>POC to schedule the assessments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>