force-app/main/default/objects/EdFund_Vendor__c/fields/Registration_Non_Refundable__c.field-meta.xml
<CustomField>
    <fullName>Registration_Non_Refundable__c</fullName>
    <label>Registration Non-Refundable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not indicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>