force-app/main/default/objects/EdFund_Vendor__c/fields/School_drop_out_rate_in_percentage__c.field-meta.xml
<CustomField>
    <fullName>School_drop_out_rate_in_percentage__c</fullName>
    <description>School drop - out rate (in percentage)</description>
    <label>School drop - out rate (in percentage)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>