force-app/main/default/objects/EdFund_Vendor__c/fields/Services_offered_when_failed__c.field-meta.xml
<CustomField>
    <fullName>Services_offered_when_failed__c</fullName>
    <inlineHelpText>If students do not pass the state exam, what services offered by the school to help students pass?</inlineHelpText>
    <label>Services offered when failed?</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>