force-app/main/default/objects/EdFund_Vendor__c/fields/Show_in_ETP_Vendor_CSV_File__c.field-meta.xml
<CustomField>
    <fullName>Show_in_ETP_Vendor_CSV_File__c</fullName>
    <label>Show in ETP Vendor CSV File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>