force-app/main/default/objects/EdFund_Vendor__c/fields/Spanish__c.field-meta.xml
<CustomField>
    <fullName>Spanish__c</fullName>
    <label>Spanish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>