force-app/main/default/objects/EdFund_Vendor__c/fields/Specifiy__c.field-meta.xml
<CustomField>
    <fullName>Specifiy__c</fullName>
    <label>Specifiy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>