force-app/main/default/objects/EdFund_Vendor__c/fields/State_exam_passing_success_rate_in_perc__c.field-meta.xml
<CustomField>
    <fullName>State_exam_passing_success_rate_in_perc__c</fullName>
    <description>State exam passing success rate (in percentage)</description>
    <label>State exam passing success rate (in perc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>