force-app/main/default/objects/EdFund_Vendor__c/fields/State_exemption_reason__c.field-meta.xml
<CustomField>
    <fullName>State_exemption_reason__c</fullName>
    <label>State exemption reason</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>