force-app/main/default/objects/EdFund_Vendor__c/fields/Student_eligibility_requirements__c.field-meta.xml
<CustomField>
    <fullName>Student_eligibility_requirements__c</fullName>
    <inlineHelpText>Where will students complete the eligibility requirements?</inlineHelpText>
    <label>Student eligibility requirements?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Off-Site</fullName>
            </value>
            <value>
                <fullName>Not Indicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>