force-app/main/default/objects/EdFund_Vendor__c/fields/Theory_Classroom_Lecture_Instructor_to_s__c.field-meta.xml
<CustomField>
    <fullName>Theory_Classroom_Lecture_Instructor_to_s__c</fullName>
    <description>Theory/Classroom/Lecture Instructor to student ratio</description>
    <label>Theory/Classroom/Lecture Instructor to s</label>
    <length>18</length>
    <type>Text</type>
</CustomField>