force-app/main/default/objects/EdFund_Vendor__c/fields/Total_cost_for_C_N_A_course__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_for_C_N_A_course__c</fullName>
    <label>Total cost for C.N.A. course</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>