force-app/main/default/objects/EdFund_Vendor__c/fields/Total_number_of_clinical_lab_hours__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_clinical_lab_hours__c</fullName>
    <description>Total number of clinical/lab hours</description>
    <label>Total number of clinical/lab hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>