force-app/main/default/objects/EdFund_Vendor__c/fields/Total_number_of_program_hours__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_program_hours__c</fullName>
    <label>Total number of program hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>