force-app/main/default/objects/EdFund_Vendor__c/fields/Total_number_of_theory_classroom_lecture__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_theory_classroom_lecture__c</fullName>
    <description>Total number of theory/classroom/lecture hours</description>
    <label>Total number of theory/classroom/lecture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>