force-app/main/default/objects/EdFund_Vendor__c/fields/Tour_of_campus_completed__c.field-meta.xml
<CustomField>
    <fullName>Tour_of_campus_completed__c</fullName>
    <label>Tour of campus completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>