force-app/main/default/objects/EdFund_Vendor__c/fields/Vendor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Notes__c</fullName>
    <label>Vendor Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>