force-app/main/default/objects/EdFund_Vendor__c/fields/Vendor_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Phone_Number__c</fullName>
    <label>Vendor Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>