force-app/main/default/objects/EdFund_Vendor__c/fields/Vendor_Web_Address__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Web_Address__c</fullName>
    <label>Vendor Web Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>