force-app/main/default/objects/EdFund_Vendor__c/fields/When_do_students_take_the_state_exam__c.field-meta.xml
<CustomField>
    <fullName>When_do_students_take_the_state_exam__c</fullName>
    <label>When do students take the state exam?</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>