force-app/main/default/objects/EdFund_Vendor__c/fields/Which_facility_will_hire_CNAs_who_gradua__c.field-meta.xml
<CustomField>
    <fullName>Which_facility_will_hire_CNAs_who_gradua__c</fullName>
    <inlineHelpText>who graduated from this school</inlineHelpText>
    <label>Which facility will hire CNAs?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7th Avenue Center, LLC</fullName>
            </value>
            <value>
                <fullName>Advanced Rehab Center of Tustin</fullName>
            </value>
            <value>
                <fullName>All Saints Sub-Acute And Rehab Center</fullName>
            </value>
            <value>
                <fullName>Almaden Health and Rehabilitation Center</fullName>
            </value>
            <value>
                <fullName>Alta Vista Healthcare &amp; Wellness Centre</fullName>
            </value>
            <value>
                <fullName>Anaheim Healthcare Center</fullName>
            </value>
            <value>
                <fullName>Anaheim Terrace Care Center</fullName>
            </value>
            <value>
                <fullName>Arvin Healthcare Center</fullName>
            </value>
            <value>
                <fullName>AUBURN OAKS CARE CENTER</fullName>
            </value>
            <value>
                <fullName>Avalon Care Center Hy Lond Merced</fullName>
            </value>
            <value>
                <fullName>Avalon Care Center San Andreas</fullName>
            </value>
            <value>
                <fullName>Avalon Care Center Sonora</fullName>
            </value>
            <value>
                <fullName>BAY AREA HEALTHCARE CENTER</fullName>
            </value>
            <value>
                <fullName>Bay Point Care and Rehabilitation Center</fullName>
            </value>
            <value>
                <fullName>Bay View Rehabilitation Hospital</fullName>
            </value>
            <value>
                <fullName>Bay Vista Healthcare &amp; Wellness Centre</fullName>
            </value>
            <value>
                <fullName>Belmont (Grand Avenue Healthcare)</fullName>
            </value>
            <value>
                <fullName>Berkeley Pines Skilled Nursing Center</fullName>
            </value>
            <value>
                <fullName>Brier Oak on Sunset</fullName>
            </value>
            <value>
                <fullName>Brighton Convalescent Center</fullName>
            </value>
            <value>
                <fullName>BROOKDALE HEALTHCARE AND WELLNESS CENTRE (Windsor)</fullName>
            </value>
            <value>
                <fullName>BROOKSIDE Skilled Nursing (Brookside Conv Hosp)</fullName>
            </value>
            <value>
                <fullName>Buena Park Nursing Center</fullName>
            </value>
            <value>
                <fullName>Buena Ventura</fullName>
            </value>
            <value>
                <fullName>Buena Vista Care Center Nursing &amp; Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Canyon Springs Post-Acute Care</fullName>
            </value>
            <value>
                <fullName>Capital Transitional Care</fullName>
            </value>
            <value>
                <fullName>Cedars of Marin</fullName>
            </value>
            <value>
                <fullName>Centinela Assisted Living Centre</fullName>
            </value>
            <value>
                <fullName>Centinela Skilled Nursing &amp; Wellness Centre (West)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>